# haskell-shooting

./: .Main.hs  shooting.cabal  stack.yaml
app/: Common.hs  Game.hs  Main.hs  Shooting.hs  Vector.hs
